2002-11-17  Marius Vollmer  <mvo@zagadka.ping.de>

	* strports.c (scm_eval_string_in_module): Validate second arg to
	be a module.  Thanks to Arno Peters!

2002-11-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* .cvsignore: remove goops.c

2002-11-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* modules.c (scm_env_top_level, scm_lookup_closure_module,
	module_variable, scm_module_lookup_closure,
	scm_module_transformer, scm_sym2var, scm_module_reverse_lookup,
	scm_system_module_env_p):  Don't compare SCM values with C
	operators == or !=.  Avoid SCM_IMP predicates.  Prefer !SCM_FALSEP
	over SCM_NFALSEP.

2002-11-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.h (SCM_MAKE_ILOC):  New macro.

	* debug.c (scm_make_iloc):  Use SCM_MAKE_ILOC instead of computing
	the iloc bitpattern here.

2002-11-14  Mikael Djurfeldt  <mdj@linnaeus>

	* coop-pthreads.c, coop-pthreads.h: scm_internal_select should be
	part of the API, otherwise it's difficult to write Guile
	extensions using non-blocking I/O => moved #include
	"libguile/iselect.h" from coop-pthreads.c --> coop-pthreads.h.

	* coop-pthreads.c (scm_unlock_mutex): Changed s_lock_mutex -->
	s_unlock_mutex.

2002-11-10  Marius Vollmer  <mvo@zagadka.ping.de>

	* __scm.h (USE_THREADS, GUILE_ISELECT): Do not define here.  They
	are defined in configure.in.

	* threads.c: Removed SCM_API from function definitions.  SCM_API
	is only for declarations.

2002-11-07  Mikael Djurfeldt  <mdj@linnaeus>

	* coop-pthreads.h: Added support for thread specific data to the
	generic C API for the coop-pthreads case.

	* threads.c, threads.h (scm_cond_init): Undo unintentional API
	change.
	(scm_cond_broadcast): Added missing function.

2002-11-04  Marius Vollmer  <marius.vollmer@uni-dortmund.de>

	* coop.c (coop_next_runnable_thread): Removed, wich should have
	happened when GUILE_ISELECT was hard-wired.

2002-11-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (libguile_la_SOURCES): Added threads.c
	(DOT_DOC_FILES): Added threads.doc.