@@ -1,3 +1,7 @@
+2002-11-17  Mikael Djurfeldt  <mdj@linnaeus>
+
+	* debug.c (scm_make_iloc): Added missing "return".
+
 2002-11-17  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* strports.c (scm_eval_string_in_module): Validate second arg to
